adicionando nova feature de admin com seus testes
